Update project image path in projects.json

--- a/projects.json
+++ b/projects.json
@@ -12,7 +12,7 @@
         "github": "",
         "demo": ""
       },
-      "image": "assets/projects/llm-routing-map.png"
+      "image": "assets/ff22.png"
     },
     {
       "title": "SafeLink – Mining Safety Monitoring Dashboard",
